k8s.yaml
deployment.yaml
===============
  apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 410668222651.dkr.ecr.us-east-1.amazonaws.com/kl-forms-web:latest
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "150Mi"
            cpu: "150m"
        ports:
        - containerPort: 3000
===============================================================================================
backend-services.yaml
=====================
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
===================================================================================================
deployment-services.yaml
=========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 410668222651.dkr.ecr.us-east-1.amazonaws.com/kl-forms-services
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "150Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
===================================================================================================
ingress.yaml
=============
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: my-app-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: k8s-default-myapping-48054c4ff1
spec:
  ingressClassName: alb
  rules:
    - host: kube-test.apps.kaaylabs.com
      http:  # <- FIXED indentation here
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 80
=====================================================================================================
service.yaml
============
apiVersion: v1
kind: ServiceAccount
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
  annotations:
    eks.amazonaws.com/role-arn: arn:aws:iam::410668222651:role/eks-alb-role
====================================================================================================
services.yaml
=============
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
